--- a/tannae-client/app/src/main/res/layout/activity_login.xml
+++ b/tannae-client/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
             android:hint="ID">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_id_account_edit"
+                android:id="@+id/edit_id_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -43,7 +43,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password_text_input"
             style="@style/Widget.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,7 +50,7 @@
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_pw_account_edit"
+                android:id="@+id/edit_pw_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -63,7 +62,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_find"
+                android:id="@+id/button_find_login"
                 style="@style/Widget.Button.TextButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -71,7 +70,7 @@
                 android:text="FIND" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_signup"
+                android:id="@+id/button_sign_up_login"
                 style="@style/Widget.Button.TextButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -84,7 +83,7 @@
                 android:layout_weight="1" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_login"
+                android:id="@+id/button_login_login"
                 style="@style/Widget.Button.TextButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
