--- a/tannae-client/app/src/main/res/layout/activity_sign_up.xml
+++ b/tannae-client/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".activity.SignUpActivity">
+    tools:context=".activity.account.SignUpActivity">
 
     <Toolbar
         android:layout_width="match_parent"
