--- a/tannae-client/app/src/main/res/layout/activity_sign_up.xml
+++ b/tannae-client/app/src/main/res/layout/activity_sign_up.xml
@@ -65,7 +65,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
                     android:hint="아이디"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName"
+                    android:maxLength="20" />
 
                 <View
                     android:layout_width="0dp"
@@ -94,20 +95,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="비밀번호"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:maxLength="20" />
 
             <EditText
                 android:id="@+id/edit_pw_check_sign_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="비밀번호 확인"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:maxLength="20" />
 
             <TextView
                 android:id="@+id/text_pw_state_sign_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="비밀번호 8자 이상 입력하세요." />
+                android:text="영문과 숫자를 사용하여 8자 이상 작성하세요." />
 
         </LinearLayout>
 
@@ -167,6 +170,12 @@
                     android:maxLength="7" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/text_private_sign_up"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="이름과 주민등록번호를 입력하고 본인인증을 하세요." />
 
             <Button
                 android:id="@+id/button_check_user_sign_up"
