--- a/tannae-client/app/src/main/res/layout/activity_sign_up.xml
+++ b/tannae-client/app/src/main/res/layout/activity_sign_up.xml
@@ -191,7 +191,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="이메일"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:maxLength="30" />
 
             <EditText
                 android:id="@+id/edit_phone_sign_up"
