--- a/tannae-client/app/src/main/res/layout/activity_find.xml
+++ b/tannae-client/app/src/main/res/layout/activity_find.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.account.FindActivity">
+    tools:context=".activity.user.FindActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
