--- a/tannae-client/app/src/main/res/layout/activity_find.xml
+++ b/tannae-client/app/src/main/res/layout/activity_find.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="계정 찾기"
-            android:textColor="@color/black"
+            android:textColor="@color/main"
             android:textSize="25dp"
             android:textStyle="bold" />
 
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="개인 정보"
-                android:textColor="@color/black"
+                android:textColor="@color/main"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
@@ -120,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="계정 정보"
-                android:textColor="@color/black"
+                android:textColor="@color/main"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
