--- a/tannae-client/app/src/main/res/layout/activity_login.xml
+++ b/tannae-client/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="FIND" />
+                android:text="FIND"
+                android:textStyle="bold"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_sign_up_login"
@@ -85,7 +86,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="SignUp" />
+                android:text="SignUp"
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="0dp"
@@ -98,7 +100,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/button_login" />
+                android:text="@string/button_login"
+                android:textStyle="bold"/>
 
         </LinearLayout>
     </LinearLayout>
