--- a/tannae-client/app/src/main/res/layout/activity_main.xml
+++ b/tannae-client/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frame_layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.user.MainActivity">
+    tools:context=".activity.main.MainActivity">
 
     <Button
         android:id="@+id/button_menu_main"
