--- a/tannae-client/app/src/main/res/layout/activity_menu.xml
+++ b/tannae-client/app/src/main/res/layout/activity_menu.xml
@@ -6,15 +6,27 @@
     android:orientation="vertical"
     tools:context=".activity.menu.MenuActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:text="M  E  N  U"
-        android:textColor="@color/main"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:background="@color/white">
+
+        <Button
+            android:id="@+id/button_back_menu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/back_arrow" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="M  E  N  U"
+            android:textColor="@color/main"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+    </Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
