--- a/tannae-client/app/src/main/res/layout/activity_menu.xml
+++ b/tannae-client/app/src/main/res/layout/activity_menu.xml
@@ -39,6 +39,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/linear_layout_account_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -69,6 +70,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linear_layout_point_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -106,6 +108,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/linear_layout_lost_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -136,6 +139,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linear_layout_history_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -173,6 +177,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/linear_layout_qna_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -203,6 +208,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linear_layout_faq_menu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
@@ -243,6 +249,7 @@
         android:orientation="horizontal" />
 
     <Button
+        android:id="@+id/button_logout_menu"
         style="@style/Widget.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
