--- a/tannae-client/app/src/main/res/layout/activity_account.xml
+++ b/tannae-client/app/src/main/res/layout/activity_account.xml
@@ -12,7 +12,7 @@
         android:background="@color/white">
 
         <Button
-            android:id="@+id/button_back_find"
+            android:id="@+id/button_back_account"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/back_arrow" />
