--- a/tannae-client/app/src/main/res/layout/activity_request.xml
+++ b/tannae-client/app/src/main/res/layout/activity_request.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frame_layout_request"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.main.passenger.RequestActivity">
+    tools:context=".activity.main.RequestActivity">
 
     <Button
         android:id="@+id/button_back_request"
