--- a/tannae-client/app/src/main/res/layout/activity_request.xml
+++ b/tannae-client/app/src/main/res/layout/activity_request.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activity.main.RequestActivity">
 
+    <ImageView
+        android:id="@+id/image_pin_request"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/map_pin"
+        android:layout_gravity="center"/>
+
+
     <Button
         android:id="@+id/button_back_request"
         android:layout_width="40dp"
