--- a/tannae-client/app/src/main/res/layout/activity_receipt.xml
+++ b/tannae-client/app/src/main/res/layout/activity_receipt.xml
@@ -498,14 +498,34 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button_evaluate_receipt"
-            style="@style/Widget.Button.TextButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="평가하기"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <RatingBar
+                android:id="@+id/rating_evaluate_receipt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="5"
+                android:stepSize="0.5" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/button_evaluate_receipt"
+                style="@style/Widget.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="평가하기"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
