--- a/tannae-client/app/src/main/res/layout/activity_receipt.xml
+++ b/tannae-client/app/src/main/res/layout/activity_receipt.xml
@@ -457,6 +457,7 @@
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/text_left_point_label_receipt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="잔여 포인트"
